--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,8 +7,10 @@
     <uses-permission android:name="android.permission.WRITE_INTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         tools:ignore="ScopedStorage" />
+
 
     <application
         android:requestLegacyExternalStorage="true"
@@ -17,7 +19,8 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/ic_circle"
         android:supportsRtl="true"
-        android:theme="@style/Theme.RecorderApp">
+        android:theme="@style/Theme.RecorderApp"
+        tools:ignore="AllowBackup">
         <activity
             android:name=".start.StartActivity"
             android:theme="@android:style/Theme.Translucent.NoTitleBar"
@@ -32,7 +35,8 @@
         <activity android:name=".main.EnterActivity" />
         <activity android:name=".screenshot.Screen"
             android:theme="@android:style/Theme.Translucent.NoTitleBar"/>
-        <activity android:name=".video.VideoRecorder" />
+        <activity android:name=".video.Recorder"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"/>
 
         <service
             android:name=".service.FloatingViewService"
@@ -40,7 +44,5 @@
             android:exported="false" />
 
     </application>
-
-    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
 </manifest>
